# k8s-hooks

./: .pre-commit-hooks.yaml  README.md  kubeseal-secrets.py  kubeseal-secrets.sh  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: create-release.yaml  main.yaml
hooks/kubeseal-secrets/: README.md  kubeseal-secrets.py  pyproject.toml
