[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "k8s-hooks"
version = "1.0.0"
description = "Collection of pre-commit hooks for Kubernetes"
authors = [{name = "Ivan", email = "gridness@icloud.com"}]

[tool.setuptools.packages.find]
include = ["hooks*"]

